[workspace]
members = [
    "bach",
    "bach-tests",
]
resolver = "2"

[workspace.dependencies]
bolero-generator = { version = "0.12", features = ["any"] }
bolero = { version = "0.12" }

[profile.bench]
lto = true
codegen-units = 1
incremental = false

[profile.fuzz]
inherits = "dev"
opt-level = 3
incremental = false
codegen-units = 1

[profile.release-debug]
inherits = "dev"
opt-level = 3
