[workspace]
members = [
    "bach",
    "bach-js",
    "bach-tests",
]
resolver = "2"

[workspace.dependencies]
bach = { version = "0.0.11", path = "./bach" }
bolero-generator = { version = "0.13", features = ["any"] }
bolero = { version = "0.13" }

[profile.bench]
lto = true
codegen-units = 1
incremental = false

[profile.fuzz]
inherits = "dev"
opt-level = 3
incremental = false
codegen-units = 1

[profile.release-debug]
inherits = "dev"
opt-level = 3
