[package]
name = "bach-js"
version = "0.0.0"
authors = ["Cameron Bytheway <bytheway.cameron@gmail.com>"]
edition = "2018"
publish = false # this is still WIP

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
bach.workspace = true
getrandom = { version = "0.3", features = ["wasm_js"] }
pin-project-lite = "0.2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
wasm-bindgen-test = "0.3.34"
