[package]
name = "bach-tests"
version = "0.0.0"
edition = "2021"
license = "MIT"
publish = false

[features]
default = ["coop", "net", "net-monitor", "tracing"]
coop = ["bach/coop"]
leaks = ["dep:checkers"]
metrics = ["bach/metrics"]
net = ["bach/net"]
net-monitor = ["bach/net-monitor"]
tracing = ["bach/tracing"]

[dependencies]
bach = { path = "../bach" }
bolero.workspace = true
checkers = { version = "0.6", features = ["backtrace"], optional = true }
criterion = { version = "0.6", features = ["html_reports"] }
insta = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
half = "=2.4.1" # Can be unpinned when we move to MSRV 1.81

[[bench]]
name = "bench"
harness = false
