[package]
name = "bach-tests"
version = "0.0.0"
edition = "2021"
license = "MIT"
publish = false

[features]
default = ["coop", "net", "net-monitor", "tracing"]
coop = ["bach/coop"]
leaks = ["dep:checkers"]
metrics = ["bach/metrics"]
net = ["bach/net"]
net-monitor = ["bach/net-monitor"]
tokio-compat = ["bach/tokio-compat"]
tracing = ["bach/tracing"]

[dependencies]
bach = { path = "../bach" }
bolero.workspace = true
checkers = { version = "0.7", optional = true }
criterion = { version = "0.7", features = ["html_reports"] }
insta = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bench]]
name = "bench"
harness = false
