[package]
name = "bach"
version = "0.0.7"
authors = ["Cameron Bytheway <bytheway.cameron@gmail.com>"]
description = "Discrete-event simulation environment for async workflows"
repository = "https://github.com/camshaft/bach"
license = "MIT"
edition = "2021"

[features]
coop = []
full = ["coop", "metrics", "net", "tracing"]
metrics = ["dep:metrics"]
net = []
tracing = ["dep:tracing"]

[dependencies]
arr_macro = "0.2"
async-task = { version = "4", default-features = false }
atomic-waker = "1"
bolero-generator.workspace = true
event-listener-strategy = { version = "0.5.2", default-features = false }
futures-core = { version = "0.3", default-features = false }
intrusive-collections = "0.9"
pin-project-lite = "0.2"
metrics = { version = "0.24", optional = true }
rand = { version = "0.8", default-features = false }
rand_xoshiro = "0.6"
tracing = { version = "0.1", optional = true }

[dev-dependencies]
bolero.workspace = true

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(always_disabled)', # used to always disable something
]
