[package]
name = "bach"
version = "0.1.1"
authors = ["Cameron Bytheway <bytheway.cameron@gmail.com>"]
description = "Discrete-event simulation environment for async workflows"
repository = "https://github.com/camshaft/bach"
license = "MIT"
edition = "2021"
rust-version = "1.83"

[features]
default = ["net"]
coop = []
full = ["coop", "metrics", "net", "net-monitor", "tracing"]
metrics = ["dep:metrics"]
net = ["dep:bytes", "dep:s2n-quic-core", "dep:siphasher"]
net-monitor = []
tokio-compat = ["tokio/time"]
tracing = ["dep:tracing"]

[dependencies]
arr_macro = "0.2"
atomic-waker = "1"
bolero-generator.workspace = true
bytes = { version = "1", optional = true }
event-listener-strategy = { version = "0.5.2", default-features = false }
futures-core = { version = "0.3", default-features = false }
intrusive-collections = "0.9"
pin-project-lite = "0.2"
metrics = { version = "0.24", optional = true }
rand = { version = "0.9", default-features = false }
rand_xoshiro = "0.7"
s2n-quic-core = { version = "0.63", default-features = false, optional = true }
siphasher = { version = "1", default-features = false, optional = true }
slotmap = "1"
tokio = { version = "1", default-features = false, features = ["sync"] }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
bolero.workspace = true
bytes = "1"
pcap-parser = "0.16"
tokio = { version = "1", default-features = false, features = ["sync"] }

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(always_disabled)', # used to always disable something
    'cfg(kani)',
]
